<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_reload" android:title="@string/reload" app:showAsAction="ifRoom" />
    <item android:id="@+id/action_live_console" android:title="@string/live_console" app:showAsAction="ifRoom" />
    <item android:id="@+id/action_status" android:title="@string/status" app:showAsAction="never" />
    <item android:id="@+id/action_home" android:title="@string/home" app:showAsAction="never" />
    <item android:id="@+id/action_set_url" android:title="@string/set_url" app:showAsAction="never" />
    <item android:id="@+id/action_open_browser" android:title="@string/open_browser" app:showAsAction="never" />
    <item android:id="@+id/action_about" android:title="@string/about" app:showAsAction="never" />
</menu>
